--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,5 +1,6 @@
 #H2 Server Properties
+#Wed Dec 04 20:05:35 CET 2019
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/soundgram|Soundgram
+webSSL=false
 webAllowOthers=true
 webPort=8082
-webSSL=false
