Display comments in post-detail page

--- a/.gitignore
+++ b/.gitignore
@@ -145,7 +145,8 @@ Desktop.ini
 # ESLint
 ######################
 .eslintcache
-/uploads/audioFiles/
+/uploads/*
+/uploads/audioFiles/*
 /uploads/images/*
 /uploads/
 /uploads/images/
