--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,5 +1,5 @@
 #H2 Server Properties
-#Tue Mar 24 13:58:18 CET 2020
+#Wed Apr 01 00:21:07 CEST 2020
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/soundgram|Soundgram
 webSSL=false
 webAllowOthers=true
