--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -15,9 +15,9 @@
 
 logging:
   level:
-    ROOT: INFO
-    io.github.jhipster: INFO
-    com.soundgram: INFO
+    ROOT: DEBUG
+    io.github.jhipster: DEBUG
+    com.soundgram: DEBUG
 
 management:
   metrics:
