--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -147,7 +147,7 @@ jhipster:
         token-validity-in-seconds: 86400
         token-validity-in-seconds-for-remember-me: 2592000
   mail: # specific JHipster mail property, for standard properties see MailProperties
-    base-url: http://localhost:9000 # Modify according to your server's URL
+    base-url: https://localhost:9000 # Modify according to your server's URL
   metrics:
     logs: # Reports metrics in the logs
       enabled: false
